--- a/templates/stock.html
+++ b/templates/stock.html
@@ -39,7 +39,11 @@
         <li>{{stock["分類"]}} {{stock["指數"]}}</li>
         {% endfor %}
 
+        <p>
+            <a href="/">首頁</a>
+        </p>
     </div>
+
 </body>
 
 </html>
