測試pm2.5資料完成

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         const timeEl = document.querySelector("#date");
         function getTime() {
             let date = new Date();
-            timeEl.innerText = `${date.getFullYear()}-${date.getMonth() + 1}\
+            timeEl.innerText = `${date.getFullYear()}-${string(date.getMonth() + 1).padStart(2, "0")}\
     -${date.getDate()} ${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
 
             setTimeout(getTime, 1000);
