1.測試圖表繪製 2.完成json資料的回傳

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
         <li>
             <a href="/pm25" target="_blank">PM2.5全台資訊</a>
         </li>
+        <li>
+            <a href="/pm25-charts" target="_blank">PM2.5全台資訊圖</a>
+        </li>
     </ul>
     <script src="{{url_for('static',filename='./js/main.js')}}"></script>
 </body>
