--- a/templates/pm25-charts.html
+++ b/templates/pm25-charts.html
@@ -40,10 +40,17 @@
     </div>
 
     <div id="six" style="width: 100%;height:400px;">
-
     </div>
+    <select name="select_county" id="select_county">
+        {% for county in countys %}
+        <option value="{{county}}">{{county}}</option>
+        {% endfor %}
+    </select>
+    <input type="button" value="確定" id="county_btn">
+    <div id="county" style="width: 100%;height:400px;"></div>
 
-    <a href="/">回首頁</a>
+    <p><a href="/">回首頁</a></p>
+
     <script src="{{url_for('static',filename='./js/pm25-charts.js')}}"></script>
     </script>
 </body>
